# Equality

./: .gitmodules  Platform.Equality.Any.h  Platform.Equality.h
cpp/: .clang-format  CMakeLists.txt
cpp/Platform.Equality/: CMakeLists.txt  Platform.Equality.Any.h  Platform.Equality.Base.h  Platform.Equality.EqualityComparerFunctionType.h  Platform.Equality.Other.h  Platform.Equality.Range.h  Platform.Equality.h
cpp/Platform.Equality.Benchmarks/: Any.cpp  CMakeLists.txt  Main.cpp  Range.cpp
cpp/Platform.Equality.Tests/: CMakeLists.txt  Platform.Equality.Benchmark.cpp  Platform.Equality.Tests.cpp
